# loglite

./: README.md  logging.hpp
0.1.0/: logging.hpp
0.1.0/doc/: faq.html
0.1.0/msvc/: test_multithread.dsp
0.1.0/test/: logging_test_hello_world.cpp  logging_test_multi_file.cpp  logging_test_multi_file2.h  logging_test_multithread.cpp  logging_test_xml_output.cpp
0.1.0/vc-8_0/: logging.sln  test.vcproj  test_hello_world.vcproj
0.2.0/doc/: index.html  tutorial.html
0.2.0/gcc/: Makefile
0.2.0/test/: logging_test_macro.cpp  logging_test_multithread.cpp  logging_test_xml_output.cpp
0.2.0/vc-8_0/: test_multithread.vcproj
0.3.0/doc/: introduction.html  reference.html
0.3.0/eclipse/test_qualifier/: .project
0.3.0/gcc/: Makefile
0.3.0/msvc/: logging.dsw
0.3.0/test/: logging_test.cpp  logging_test_iostream.cpp  logging_test_macro.cpp
0.3.0/vc-8_0/: test_iostream_server.vcproj  test_qualifier.vcproj
0.4.0/doc/: faq.html  reference.html  tutorial.html
0.4.0/eclipse/test_format/: .project
0.4.0/eclipse/test_iostream/: .project
0.4.0/eclipse/test_multi_file/: .project
0.4.0/eclipse/test_multithread/: .project
0.4.0/eclipse/test_xml_output/: .project
0.4.0/gcc/: README
0.4.0/msvc/: test.dsp  test_macro.dsp
0.4.0/test/: logging_test_multi_file2.h  logging_test_multithread.cpp  logging_test_qualifier.cpp  logging_test_xml_output.cpp
0.4.0/vc-8_0/: test_hello_world.vcproj  test_iostream_client.vcproj  test_xml_output.vcproj
doc/: index.htm
eclipse/test/: .project
eclipse/test_iostream_client/: .project
eclipse/test_iostream_server/: .project
eclipse/test_iostream_shmem/: .project
eclipse/test_macro/: .project
eclipse/test_scope/: .project
gcc/: CMakeLists.txt  Makefile  README
msvc/: logging.dsp
test/: logging_test.cpp  logging_test_format.cpp  logging_test_hello_world.cpp  logging_test_iostream_client.cpp  logging_test_iostream_server.cpp  logging_test_iostream_shmem.cpp  logging_test_macro.cpp  logging_test_multi_file.cpp  logging_test_multi_file2.cpp  logging_test_multi_file2.h  logging_test_multithread.cpp  logging_test_qualifier.cpp  logging_test_scope.cpp  logging_test_xml_output.cpp
trunk/: logging.hpp
trunk/doc/: index.htm  introduction.html
trunk/eclipse/test_hello_world/: .cproject  .project
trunk/eclipse/test_iostream_client/: .project
trunk/gcc/: CMakeLists.txt  Makefile
trunk/test/: Jamfile  Jamfile.v2  logging_test.cpp  logging_test_format.cpp  logging_test_hello_world.cpp  logging_test_iostream.cpp  logging_test_iostream_client.cpp  logging_test_iostream_server.cpp  logging_test_iostream_shmem.cpp  logging_test_macro.cpp  logging_test_multi_file.cpp  logging_test_multi_file2.cpp  logging_test_multithread.cpp  logging_test_qualifier.cpp  logging_test_scope.cpp  logging_test_xml_output.cpp
trunk/vc-8_0/: logging.sln  logging.vcproj  test.vcproj  test_iostream.vcproj  test_iostream_shmem.vcproj  test_macro.vcproj  test_multiple_file.vcproj  test_multithread.vcproj  test_xml_output.vcproj
vc-8_0/: logging.sln  logging_hello_world.dsp  test.vcproj  test_hello_world.dsp  test_hello_world.vcproj  test_iostream_shmem.vcproj  test_macro.vcproj  test_multiple_file.vcproj  test_multithread.vcproj
